--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   </head>
   <body>
     <!-- Встроим твою игру в iframe -->
-    <iframe src="https://sashaumnykh.github.io/bubble-wrap-tg-version/"></iframe>
+    <iframe src="https://sashaumnykh.github.io/bubble-wrap/"></iframe>
   </body>
 </html>
